--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asf_search >= 6.4.0
-pyroSAR == 0.20.0
+pyroSAR >= 0.21.0
 pyrasta >= 1.3.17
 cdtec >= 0.1.1
 geopandas>0.13.0
 numpy~=1.22.3
 rtree ~= 0.9.7
 tqdm~=4.64.0
+spatialist >= 0.12.0
+pytz >= 2022.1
+python-dateutil >= 2.8.2
