--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-asf_search >= 6.4.0
+numpy <= 1.23.5
+scipy <= 1.11.2
 pyroSAR >= 0.21.0
-pyrasta >= 1.3.17
+asf_search >= 6.4.0
 cdtec >= 0.1.1
-geopandas>0.13.0
-numpy~=1.22.3
-rtree ~= 0.9.7
-tqdm~=4.64.0
-spatialist >= 0.12.0
-pytz >= 2022.1
-python-dateutil >= 2.8.2
+rtree >= 1.0.1
+pyrasta >= 1.3.17
+geopandas <= 0.12.2
